# cognitive-governance-lab

./: .gitignore  AGENTS.md  README.md  RESEARCH_PLAN_GO_20260429.md  pyproject.toml
artifacts/case-law/: BREAK_GLASS_20260429_BICAMERAL_IMPORT_DEPENDENCY.md  BREAK_GLASS_20260429_MONTH1_PHANTOM_DETECTION_MISS.md
artifacts/evidence-locker/: EVIDENCE_20251231_CODEX-STRATEGIC-NONCOMPLIANCE.md  EVIDENCE_20260110_PROACTIVE-CONSTITUTION-ADVERSARIAL-EVALUATION.md  EVIDENCE_20260501_EIGHT-WONDERS-COMPRESSION-INCIDENT.md  SOURCE_20251227_CHATGPT-MASLOW-AI-HIERARCHY-ORIGIN.md  SOURCE_GEMINI_CONTRACT-WINDOW-CODESIGN.md  SOURCE_PENDING_OBS7-DELIBERATE-NONCOMPLIANCE.md
data/: data_pipeline.py  pilot.csv
datasets/pilot/: PILOT-S001.json  PILOT-S002.json  PILOT-S003.json  PILOT-S004.json  (+7 more)
docs/: session-protocol.md
governance-kernel/: __init__.py
ml-docs/: bicameral-review-integration.md
paper/: experiment_log.md  references.bib  runtime_constitutional_governance_draft.md
proposal/: FELLOWS_APP_BLANK.md  FELLOWS_APP_FILLED.md  FELLOWS_APP_FILLED.overclaim-report.md  RESEARCH_STORY_MASTER.md  THREE_PROPOSALS_MASTER.md  executive-summary-proposal.bmt-report.md  executive-summary-proposal.md  proposal-b-cognitive-safety-interpretability.bmt-report.md  proposal-b-cognitive-safety-interpretability.md  proposal-c-monotropic-constitutional-agents.bmt-report.md  proposal-c-monotropic-constitutional-agents.md  research-plan.bmt-report.md  research-plan.md
scripts/: pilot_runner.py
tests/: test_contract_window.py  test_invariant_checkers.py  test_session_recorder.py
(+7 files in other folders)
