[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cognitive-governance-lab"
version = "0.1.0"
description = "Runtime governance framework for human-AI collaborative investigative arcs"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = [
  "governance-kernel/contract-window",
  "governance-kernel/bicameral-review",
  "governance-kernel/invariant-checkers",
]
testpaths = ["tests"]
